--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -45,7 +45,7 @@ Single-Cell Analysis with Bioconductor, or _OSCA_ book by Robert
 Amezquita, Aaron Lun, Stephanie Hicks, and Raphael Gottardo
 [@Amezquita2020] has carried out closely related work on the
 _SummarizedExperiment_ data container and its derivatives in the field
-of single cell sequencing studies. Many methods and approached used in
+of single cell sequencing studies. Many methods and approaches used in
 this book have been derived from the OSCA framework, with the
 necessary further adjustments for microbiome research.
 
