--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -11,7 +11,7 @@ data("GlobalPatterns")
 se <- GlobalPatterns 
 ```
 
-Taxonomic information are a key part of analyzing microbiome data and without
+Taxonomic information is a key part of analyzing microbiome data and without
 it, any type of data analysis probably will not make much sense. However,
 the degree of detail of taxonomic information differs depending on the dataset
 and annotation data used.
@@ -20,7 +20,7 @@ Therefore, the mia package expects a loose assembly of taxonomic information
 and assumes certain key aspects:
 
 * Taxonomic information is given as character vectors or factors in the 
-`rowData` of an `SummarizedExperiment` object.
+`rowData` of a `SummarizedExperiment` object.
 * The columns containing the taxonomic information must be named `domain`,
 `kingdom`, `phylum`, `class`, `order`, `family`, `genus`, `species` or with
 a capital first letter.
@@ -46,7 +46,7 @@ dataset. For more information visit the
 The DECIPHER package [@R-DECIPHER] implements the `IDTAXA` algorithm to assign
 either taxonomic information or function information. For `mia`
 only the first option is of interest for now and more information can be
-found on the [DECIPHER website](http://www2.decipher.codes/Classification.html)
+found on the [DECIPHER website](http://www2.decipher.codes/Classification.html).
 
 ## Functions to access taxonomic information
 
@@ -85,9 +85,9 @@ information into a character vector of `length(x)`
 head(getTaxonomyLabels(se))
 ```
 
-By default this will used the lowest non-empty information to construct a
-string with the following scheme `level:value`. If all levels are the same
-this part is omited, but can be added by setting `with_rank = TRUE`
+By default, this will use the lowest non-empty information to construct a
+string with the following scheme `level:value`. If all levels are the same,
+this part is omitted, but can be added by setting `with_rank = TRUE`.
 
 ```{r}
 phylum <- !is.na(rowData(se)$Phylum) & 
@@ -97,8 +97,8 @@ head(getTaxonomyLabels(se[phylum,], with_rank = TRUE))
 ```
 
 By default the return value of `getTaxonomyLabels` contains only unique elements
-by passing it through `make.unique`. This step can be omited by setting 
-`make_unique = FALSE`
+by passing it through `make.unique`. This step can be omitted by setting 
+`make_unique = FALSE`.
 
 ```{r}
 head(getTaxonomyLabels(se[phylum,], with_rank = TRUE, make_unique = FALSE))
@@ -110,8 +110,8 @@ To apply the loop resolving function `resolveLoop` from the
 
 ### Generate a taxonomic tree on the fly
 
-To create a taxonomic tree `taxonomyTree` used the information and returns a
-`phylo` object. Duplicate information from the `rowData` are removed.
+To create a taxonomic tree, `taxonomyTree` used the information and returns a
+`phylo` object. Duplicate information from the `rowData` is removed.
 
 ```{r}
 taxonomyTree(se)
@@ -122,7 +122,7 @@ se <- addTaxonomyTree(se)
 se
 ```
 
-The implementation is based on the the `toTree` function from the
+The implementation is based on the `toTree` function from the
 `TreeSummarizedExperiment` package [@R-TreeSummarizedExperiment].
 
 ## Data agglomeration {#data-agglomeration}
@@ -140,7 +140,7 @@ altExp(se, "Family") <- agglomerateByRank(se, rank = "Family",
 altExp(se, "Family")
 ```
 
-If multiple assays (counts and relabundance) exists, both will be agglomerated.
+If multiple assays (counts and relabundance) exist, both will be agglomerated.
 
 ```{r}
 assayNames(se)
@@ -160,13 +160,13 @@ any level present in `r mia::taxonomyRanks(se)`.
 
 ## Data transformation
 
-Data transformation is very common procedure in microbiome analysis. 
+Data transformation is a very common procedure in microbiome analysis. 
 In transformation, each data point is replaced with transformed value that is 
 calculated by applying transformation formula to the data point. Transformation 
 can be used, for example, to normalize skewed data, or to reduce weight of bigger 
 values compared to smaller values. 
 
-In mia package, transformations are applied to abundance data. Transformed 
+In mia package, transformations are applied to abundance data. The transformed 
 abundance table is stored back to 'assays'. mia includes transformation 
 functions for sample-wise or column-wise transformation ('transformSamples()'), 
 and for feature-wise or row-wise transformation ('transformFeatures()'). 
@@ -197,7 +197,7 @@ assays(se)
 
 ## Pick specific  
 
-Retrieving of specific elements are required for specific analysis. For
+Retrieving of specific elements that are required for specific analysis. For
 instance, extracting abundances for a specific taxa in all samples or all taxa 
 in one sample.  
 
