--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -25,7 +25,7 @@ tax_data
 ## Library size   
 
 The total counts/sample can be calculated using the
-`perCellQCMetrics`/`addPerCellQC` from the `scater` package. The first one 
+`perCellQCMetrics`/`addPerCellQC` from the `scater` package. The former one 
 just calculates the values, whereas the latter one directly adds them to the
 `colData`.
 
