--- a/17_differential_abundance.Rmd
+++ b/17_differential_abundance.Rmd
@@ -98,7 +98,7 @@ fido::plot(priors, pars="Lambda") + ggplot2::xlim(c(-5, 5))
 ```
 
 Estimating the posterior by including the data at `Y`.
-Note: Some computational failures could occur (see [discussion](https://github-wiki-see.page/m/jsilve24/fido/wiki/Frequently-Asked-Questions))
+Note: Some computational failures could occur (see [discussion](https://github-wiki-see.page/m/jsilve24/fido/wiki/Frequently-Asked-Questions));
 the arguments `multDirichletBoot` `calcGradHess` could be passed in such case.
 
 ```{r}
