--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -43,7 +43,7 @@ richness. Several estimators are available, including for instance ACE
 [@Chao1992] and Chao1 [@Chao1984]. Richness estimates are unaffected
 by species abundances.
   
-**Phylogenetic diversity** was first proposed by [@Faith1992], unlike the 
+**Phylogenetic diversity** was first proposed by [@Faith1992]. Unlike the 
   diversity measures mentioned above, Phylogenetic diversity (PD) 
   measure incorporates information from phylogenetic relationships 
   stored in `phylo` tree between species in a community (sample). The 
@@ -114,7 +114,7 @@ Alpha diversities can be visualized with boxplot. Here, Shannon index is compare
 between different sample type groups. Individual data points are visualized by 
 plotting them as points with `geom_jitter`.
 
-`geom_signif` is used to test, if these differences are statistically significant.
+`geom_signif` is used to test whether these differences are statistically significant.
 It adds p-values to plot.
 
 ```{r visualize-shannon}
@@ -148,7 +148,7 @@ ggplot(df, aes(x = SampleType, y = shannon)) +
 **Phylogenetic diversity**  
 
 The phylogenetic diversity is calculated by `mia::estimateDiversity`. This is a faster re-implementation of   
-the widely function in _`picante`_ [@R-picante, @Kembel2010].  
+the widely used function in _`picante`_ [@R-picante, @Kembel2010].  
 
 Load `picante` R package and get the `phylo` stored in `rowTree`. 
 ```{r phylo-div-1}
