--- a/19_multitable.Rmd
+++ b/19_multitable.Rmd
@@ -32,7 +32,7 @@ se <- GlobalPatterns
 assays(se)
 ```
 
-As an example the relative abundance is calculated.
+As an example, the relative abundance is calculated.
 
 ```{r}
 se <- relAbundanceCounts(se)
@@ -48,7 +48,7 @@ actually a requirement for any `SummarizedExperiment` object.
 _**Alternative experiments**_ differ from transformations as they can
 contain complementary data, which is no longer tied to the same
 dimensions as the assay data. However, the number of samples (columns)
-must be the same, however.
+must be the same.
 
 This can come into play for instance when one has taxonomic abundance
 profiles quantified with different measurement technologies, such as
@@ -100,7 +100,7 @@ datasets relate to each other the data can be stored as:
 
 1. Separate _altExp_ if the samples can be matched directly 1:1; or
 2. As `MultiAssayExperiment` objects, in which the connections between
-sample are defined through a `sampleMap`. Each element on the
+samples are defined through a `sampleMap`. Each element on the
 `experimentsList` of an `MultiAssayExperiment` is `matrix` or
 `matrix`-like object including `SummarizedExperiment` objects, and the
 number of samples can differ between the elements.
@@ -120,7 +120,7 @@ For information have a look at the [intro vignette](https://bioconductor.org/pac
    altExp             free              match    Alternative experiments  
 MultiAssay            free      free (mapping)    Multi-omic experiments    
 
-Table: (\#tab:options) **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that is of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is required but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies.
+Table: (\#tab:options) **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that are of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is required but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies.
 
 
 
