Specified data source pacage

--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -7,7 +7,7 @@ chapterPreamble()
 
 ```{r, message=FALSE}
 library(mia)
-data("GlobalPatterns")
+data("GlobalPatterns", package="mia")
 se <- GlobalPatterns 
 ```
 
