--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -18,7 +18,7 @@ samples, is not the aim of the following sections.
 
 ```{r load-pkg-data}
 library(mia)
-data("GlobalPatterns")
+data("GlobalPatterns", package="mia")
 se <- GlobalPatterns
 ```
 
