--- a/15_beta_diversity.Rmd
+++ b/15_beta_diversity.Rmd
@@ -71,7 +71,7 @@ lab](https://www.huber.embl.de/users/klaus/Teaching/statisticalMethods-lab.pdf).
 ```{r relstress}
 # Example data
 library(mia)
-data(GlobalPatterns)
+data(GlobalPatterns, package="mia")
 
 # Data matrix (features x samples)
 x <- GlobalPatterns
