--- a/16_microbiome_community.Rmd
+++ b/16_microbiome_community.Rmd
@@ -11,7 +11,7 @@ if(!require(ecodist)){
 
 ```{r load-pkg-data}
 library(mia)
-data("GlobalPatterns")
+data("GlobalPatterns", package="mia")
 tse <- GlobalPatterns
 ```
 
@@ -375,7 +375,7 @@ vec <- colnames(prob)[max.col(prob,ties.method = "first")]
 
 ```
 
-Computing the euclidean PCoA and storing it as a dataframe
+Computing the euclidean PCoA and storing it as a data frame
 
 ```{r}
 # Does clr transformation. Pseudocount is added, because data contains zeros.
@@ -444,7 +444,7 @@ library(bluster)
 library(patchwork) # For arranging several plots as a grid
 library(scater)
 
-data("enterotype")
+data("enterotype", package="mia")
 tse <- enterotype
 tse <- transformCounts(tse, method = "rclr")
 
