--- a/90_example_data.Rmd
+++ b/90_example_data.Rmd
@@ -17,7 +17,7 @@ The datasets in `mia` are conversions of the `phyloseq` datasets
 ```{r, message=FALSE}
 library(mia)
 # Example how to load data
-data("GlobalPatterns")
+data("GlobalPatterns", package="mia")
 
 GlobalPatterns
 ```
