--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -7,7 +7,7 @@ chapterPreamble()
 
 ```{r, message=FALSE}
 library(mia)
-data("GlobalPatterns")
+data("GlobalPatterns", package="mia")
 se <- GlobalPatterns 
 ```
 
