Added package ecosyste info

--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -90,6 +90,37 @@ the basis for microbiome analysis, including the
 by Lucas Schiffer, Levi Waldron and others [@Pasolli2017].
 
 
+## Package ecosystem
+
+The miaverse (TreeSE) framework is supported (at least) by the
+following packages. Some of these are independently developed and
+maintained.
+
+
+Data container:
+
+- [TreeSummarizedExperiment](http://bioconductor.org/packages/devel/bioc/html/TreeSummarizedExperiment.html)
+
+
+R packages (miaverse):
+
+- [mia](microbiome.github.io/mia)
+- [miaViz](microbiome.github.io/miaViz)
+- [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (external)
+
+
+Demonstration data:
+
+- [mia](microbiome.github.io/mia) - classical microbiome data sets; see `rdata(package="mia")`
+- [microbiomeDataSets](microbiome.github.io/microbiomeDataSets) - microbiome data from ExperimentHub 
+- [curatedMetagenomicData](https://waldronlab.io/curatedMetagenomicData/) (external)
+
+
+Online tutorials and training material:
+
+- [OMA](microbiome.github.io/OMA)
+
+
 
 
 
